[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/mouse.png" type="Texture" id=1]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/mouse_walk.png" type="Texture" id=2]
[ext_resource path="res://mobScenes/Mouse.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/StoneWalk.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/GrassWalk.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/images/Extra animations and enemies/Enemy sprites/mouse_dead.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/MouseSqueak.wav" type="AudioStream" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 150.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "deathFlipped"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -210.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1.8025, 1.8025, 1.8025, 1.8025, 1.8025, 1.8025, 1.8025 ),
"update": 0,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.721569, 0.0705882, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0235294, 0, 0, 1 )

[node name="Mouse" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 990, 20 )
collision_layer = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/death = SubResource( 4 )
anims/deathFlipped = SubResource( 7 )
anims/walk = SubResource( 2 )

[node name="MovementCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 2.91, 1.69 )
shape = SubResource( 3 )

[node name="GrassWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -17.0
pitch_scale = 1.33
max_distance = 500.0

[node name="StoneWalk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0
pitch_scale = 1.33
max_distance = 500.0

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2( 2.91, 1.69 )
shape = SubResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.34

[node name="DeathArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathArea"]
scale = Vector2( 2.91, 1.69 )
shape = SubResource( 3 )

[node name="DeleteTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -34.0
margin_right = 38.0
margin_bottom = -19.0
rect_scale = Vector2( 0.9, 0.75 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 35.0
percent_visible = false

[node name="MouseBite" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -12.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="body_entered" from="DeathArea" to="." method="_on_DeathArea_body_entered"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_DeleteTimer_timeout"]
